# axum-template

./: .gitignore  Cargo.toml  README.md
domain/models/: Cargo.toml
domain/models/src/: user.rs
domain/repository/src/: user.rs
domain/service/: Cargo.toml
domain/service/src/: auth.rs
migrations/: 20241026231255_create_users_table.sql
services/auth/: Cargo.toml
services/auth/src/: app.rs  cli.rs  config.rs  main.rs
services/auth/src/api/: mod.rs  users.rs
services/auth/src/structs/: users.rs
services/template/: Cargo.toml
services/template/src/: cli.rs  config.rs  main.rs
services/template/src/api/: hello.rs  mod.rs
