[workspace]
resolver = "2"
default-members = [
    "services/auth",
]

members = [
    "domain/models",
    "domain/repository",
    "domain/service",
    "services/auth",
]

[workspace.dependencies]
models = { path = "domain/models" }
repository = { path = "domain/repository" }
service = { path = "domain/service" }
